<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:layout_height="48dp"
            android:defaultValue="@string/note_style_default"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:icon="@drawable/ic_style"
            android:key="note_style_key"
            android:title="@string/chose_note_style"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:layout_height="48dp"
            android:defaultValue="@string/def_time_format"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:icon="@drawable/ic_time_format"
            android:key="time_format_key"
            android:title="@string/chose_time_format"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:icon="@drawable/ic_remove_ads"
            android:key="remove_ads_key"
            android:summary="@string/remove_ads_summary"
            android:title="@string/remove_ads" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:layout_height="48dp"
            android:defaultValue="green"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_values"
            android:icon="@drawable/ic_theme_style"
            android:key="theme_key"
            android:title="@string/chose_theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="@string/title_size_default"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="title_size_key"
            android:icon="@drawable/ic_text"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="@string/content_size_default"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:key="content_size_key"
            android:icon="@drawable/ic_text_content"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>